Fixed overflow on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -45,11 +45,26 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   overflow-y: hidden;
+  /* height: 100vh; */
 }
 
-main {
-  height: 100vh;
-}
+/* body { */
+/* height: 100%; */
+/* height: 80%; */
+/* max-height: 100vh; */
+/* background-color: purple; */
+/* padding: 0; */
+/* margin: 0; */
+/* overflow: hidden; */
+/* height: calc(var(--vh, 1vh) * 100); */
+/* } */
+
+/* main { */
+/* height: 100vh; */
+/* height: 100%; */
+/* background-color: yellow; */
+/* overflow: hidden; */
+/* } */
 
 /* Desktop */
 .mobile-shown {
